# pouchdb-rs

./: Cargo.toml  README.md
src/: document.rs  error.rs  lib.rs  options.rs  pouchdb_sys.rs  responses.rs
src/events/: changes_event_emitter.rs  mod.rs  replication_event_emitter.rs
src/options/: all_docs.rs  changes.rs  create.rs  fetch.rs  query.rs  replication.rs  selector.rs
