[package]
name = "pouchdb"
version = "0.1.0"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
edition = "2018"

[dependencies]
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
